examples/test/testpolicy2054.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2054
  namespace: namespace431
spec:
  podSelector:
    matchLabels:
      key29: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value10
          key40: value35
          key41: value49
      podSelector:
        matchLabels:
          key49: value47
          key38: value4
